--- a/openstack_dashboard/static/dashboard/html/launch_instance.html
+++ b/openstack_dashboard/static/dashboard/html/launch_instance.html
@@ -10,56 +10,57 @@
 
       <div>
         <form class="form-horizontal">
-          <fieldset class="row">
+          <fieldset class="row-fluid">
 
             <div class="control-group">
-              <div class="span4">
-                <label for="id_name">Instance Name</label>
-                <input id="id_name" class="span4" maxlength="80" name="name" ng-model="name" required type="text">
-              </div>
-              <div class="span2">
-                <label for="id_count">Instance Count</label>
-                <input id="id_count" class="span2" name="count" ng-model="count" type="text" value="1">
-              </div>
+              <div class="row">
+                <div class="span4">
+                  <label for="id_name">Instance Name</label>
+                  <input id="id_name" class="span4" maxlength="80" name="name" ng-model="name" required type="text">
+                </div>
+                <div class="span2">
+                  <label for="id_count">Instance Count</label>
+                  <input id="id_count" class="span2" name="count" ng-model="count" type="text" value="1">
+                </div>
 
-              <div class="span4">
-                <label for="id_availability_zone">Availability Zone</label>
-                <select id="id_availability_zone" class="span4" name="availability_zone">
-                  <option value="az1">az1</option>
-                </select>
+                <div class="span4">
+                  <label for="id_availability_zone">Availability Zone</label>
+                  <select id="id_availability_zone" class="span4" name="availability_zone">
+                    <option value="az1">az1</option>
+                  </select>
+                </div>
               </div>
             </div>
 
-
-            <div class="span12 control-group">
+            <div class="control-group">
               <div class="btn-group">
                 <button type="button" class="btn btn-default" data-ng-model="type" data-btn-radio="'ephemeral'">Ephemeral Root Disk</button>
                 <button type="button" class="btn btn-default" data-ng-model="type" data-btn-radio="'persistent'">Persistent Root Disk</button>
               </div>
             </div>
 
-            <div class="span12 control-group">
+            <div class="control-group">
               <div data-tabset>
                 <div data-tab>
-                  <a href="#" data-tab-heading>
+                  <div data-tab-heading>
                     Public
-                  </a>
+                  </div>
                   <div>prout</div>
                 </div>
 
                 <div data-tab>
-                  <a href="#" data-tab-heading>
+                  <div data-tab-heading>
                     Project
-                  </a>
+                  </div>
                   <div>
                     Prout
                   </div>
                 </div>
 
                 <div data-tab>
-                  <a href="#" data-tab-heading>
+                  <div data-tab-heading>
                     Shared with me
-                  </a>
+                  </div>
                   <div>
                     No image shared with you.
                   </div>
