--- a/openstack_dashboard/static/dashboard/html/launch_instance.html
+++ b/openstack_dashboard/static/dashboard/html/launch_instance.html
@@ -1,3 +1,4 @@
+
 <div class="modal-header">
   <h3>Launch Instance</h3>
 </div>
@@ -41,29 +42,21 @@
 
             <div class="control-group">
               <div data-tabset>
-                <div data-tab>
+                <div data-tab ng-repeat="data_type in datas">
                   <div data-tab-heading>
-                    Public
+                    {$ data_type.title $} <span class="badge">{$ data_type.total $}</span>
                   </div>
-                  <div>prout</div>
-                </div>
-
-                <div data-tab>
-                  <div data-tab-heading>
-                    Project
-                  </div>
-                  <div>
-                    Prout
-                  </div>
-                </div>
-
-                <div data-tab>
-                  <div data-tab-heading>
-                    Shared with me
-                  </div>
-                  <div>
-                    No image shared with you.
-                  </div>
+                  <table class="table table-bordered">
+                    <tbody ng-repeat="source_type in data_type">
+                    <tr ng-repeat="value in source_type.values">
+                      <td ng-if="$first" rowspan="{$ source_type.total $}" class="span2">
+                        <h5>{$ source_type.title $}</h5>
+                        <h6>{$ source_type.legend $}</h6>
+                      </td>
+                      <td>{$ value | name $}</td>
+                    </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
